# jardin

./: .editorconfig  .envrc  .gitignore  .mdformat.yaml  .sops.yaml  .versionrc  .yamlfmt  .yamllint.yml  Cargo.toml  README.md  REUSE.toml  Taskfile.yaml  _typos.toml  book.toml  deny.toml  devshell.toml  flake.nix  jardin.toml  lefthook.yml  notes.txt  rustfmt.toml  secrets.sops.yaml  secrets.yaml
.gitlab/issue_templates/: bug.md  spike.md  task.md  user-story.md
.reuse/: dep5
build-system/: Dev.yaml  build.nix  checks.nix  default.nix  dev.nix  docs.nix
docs/: CHANGELOG.md  README.md  SUMMARY.md  Taskfile.yaml
docs/guide/: contributing.md
docs/ref/: dev.md
docs/vhs/: getting-started.tape
examples/: Taskfile.dist.yaml  flake.nix  jardin.new.toml  jardin.toml
examples/lib/: Taskfile.dist.yaml  jardin.toml
iac/: default.nix
iac/application/: default.nix
infrastructure-as-code/infra/: default.nix  job.nix  name-servers.nix
infrastructure_as_code/provisioning/: Notes.md  flake.nix
kube/: applications.yaml  base.yaml  controllers.yaml  kustomization.yaml
kube/applications/: certificate.yaml  download.pv.yaml  download.pvc.yaml  downloads.pv.yaml  downloads.pvc.yaml  kuma.mesh.yaml  kustomization.yaml  media.pv.yaml  media.pvc.yaml  namespace.yaml  pvc-download.yaml  pvc-media.yaml
kube/base/: applications.kustomization.yaml  base.kustomization.yaml  cluster.kustomization.yaml  controllers.kustomization.yaml  domain.configmap.yaml  fluxcd.helmchart.cattle.yaml  jardin.gitrepository.yaml  jardin.kustomization.yaml  kustomization.yaml
lib/: backend.nix  configParser.nix  runWithNix.nix
modules/: default.nix
nix/: default.nix  dev.nix
nix/nixos/: ai.nix  (+22 more)
src/: main.rs
taskfiles/: Dev.yaml  Docs.yaml  Lint.yaml  Tests.yaml
tests/: Taskfile.dist.yaml  Taskfile.yaml  flake.nix  secrets.sops.yaml
(+635 files in other folders)
