# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "jardin"
version = "0.1.0"
edition = "2021"
license-file = "./LICENSES/AGPL-3.0-or-later.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
regex = "1"
log = "0.4"
pretty_env_logger = "0.4"
async-trait = "0.1.52"
tokio = { version = "1", features = ["full"] }
# TODO: use clap_mangen to generate manual pages
clap_mangen = "0.2.11"
priority-queue = "1.2.2"
multimap =  "0.8.3"
mockall = "0.11.2"
# afl = "0.13.0"
arbitrary = { version = "1.3.0", features = ["derive"] }
cargo-mutants = "23.5"
colored = "2"

[dependencies.serde]
version = "1.0"
features = ["std", "derive"]

[dependencies.confy]
version = "0.5.1"
features = ["toml_conf"]
default-features = false

[dependencies.clap]
version = "4.2.7"
features = ["derive"]

[dependencies.clap_complete]
version = "4.2.3"

[dev-dependencies]
coverage-helper = "0.1"
serde_json = "1.0.96"
fake = { version = "2.6", features=['derive']}
rand = "0.8"
